--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -581,11 +581,11 @@ header{
 
 @keyframes slider {
   0% {
-    background-image: url(CompanyImage/spl-equipment\ img.jpg);
+    background-image: url(CompanyImage/Shipping-Companies_.jpg);
    
   }  
   30% {
-    background-image: url(CompanyImage/backg1.webp);
+    background-image: url(CompanyImage/multimodal\ img.jpg);
   }  
   60% {
     background-image: url(CompanyImage/freight-services.jpg);
