--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -105,7 +105,14 @@ header{
   .burger {
     display: none;
     cursor: pointer;
-    transition: transform 0.3s ease-in-out;
+    transition: 0.3s ease-out;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 4px;
+  }
+
+  .burger:hover{
+    background-color: #330202ad;
+    border-radius: 4px;
   }
   
   .burger div {
@@ -113,7 +120,7 @@ header{
     height: 3px;
     background-color: white;
     margin: 5px;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease-out;
   }
 
   @media only screen and (max-width: 600px) {
@@ -335,6 +342,7 @@ header{
 }
 
 .card{
+  max-width: 100%;
   width: 500px
 }
 
@@ -378,10 +386,18 @@ header{
   transition: 0.3s ease-out;
 }
 
+.card, .card-service{
+  transition: 0.3s ease-out;
+}
 .card:hover{
-  opacity: 0.8;
   cursor: pointer;
-  border: 2px solid rgb(253, 193, 115);
+  transform: scale(1.08);
+
+}
+
+.card-service:hover{
+  cursor: pointer;
+  transform: scale(1.05);
 
 }
 .card img{
@@ -391,23 +407,24 @@ header{
   margin-left: auto;
   margin-right: auto;
   backdrop-filter: blur(3px);
-  background-color: #fcfbf970;
-  padding: 10px;
-  border-radius: 12px;
+  /* background-color: #fcfbf970; */
+  padding: 5px;
+
 }
 
 .card-body{
   font-size: 18px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-overflow: ellipsis;
-  overflow: hidden;
+ 
 }
 
 .card-body p{
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 100;
   font-style: italic;
-  line-height: 20px;
+  line-height: 15px;
+ text-align: center;
 }
 
 .card-body h5{
@@ -560,17 +577,34 @@ header{
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
-  color: rgb(110, 96, 83);
+  color: rgb(56, 44, 33);
   /* line-height: 30px; */
 }
 
 .service-container{
  display: flex;
  justify-content: center;
- /* flex-wrap: wrap; */
- flex-grow: 1;
- flex-flow: wrap;
-  gap: 30px;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.card-service .service-img{
+  width: 100%;
+  height: 200px;
+  padding: auto;
+  margin: auto;
+
+}
+
+.card-service{
+  background-color: white;
+  padding: 10px;
+}
+
+.card-body-service{
+  padding: 15px;
+  text-align: center;
+  font-weight: 200;
 }
 
 .backgroud{
@@ -581,14 +615,14 @@ header{
 
 @keyframes slider {
   0% {
-    background-image: url(CompanyImage/Shipping-Companies_.jpg);
+    background-image: url(CompanyImage/shutterstock_ship.jpg);
    
   }  
   30% {
-    background-image: url(CompanyImage/multimodal\ img.jpg);
+    background-image: url(CompanyImage/shutterstock_ship.jpg);
   }  
   60% {
-    background-image: url(CompanyImage/freight-services.jpg);
+    background-image: url(CompanyImage/shutterstock_ship.jpg);
   }  
   100% {
     background-image: url(CompanyImage/shutterstock_ship.jpg);
