--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Unica+One&display=swap');
  :root {
@@ -123,6 +123,9 @@ header{
     transition: all 0.3s ease-out;
   }
 
+
+/* smaller screen */
+
   @media only screen and (max-width: 600px) {
     .navbar {
       display: flex;
@@ -203,6 +206,8 @@ header{
 
 
   }
+
+  /* Smallest Screen Media */
   
   @media only screen and (max-width: 768px) {
     .navbar {
@@ -266,6 +271,10 @@ header{
     }
 
   }
+
+
+  /* Introductory Page */
+
   
 .container-head{
   background-image: url(CompanyImage/backg1.webp);
@@ -284,8 +293,6 @@ header{
 }
 
 .head-text{
-  font-size: 18px;
-  /* font-weight: 600; */
   display: inline-block;
   padding: 10px;
   width: 100%;
@@ -296,17 +303,18 @@ header{
 
 .head-text h1{
   text-transform: uppercase;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align-last: left;
-  text-overflow: clip;
-  text-wrap: wrap;
-
+  font-family: "Rubik Wet Paint", system-ui;
+  font-weight: 100;
+  font-style: normal;
+ font-size: 2.5rem;
 }
+
 
 .head-text p{
   font-style: oblique;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
+  font-weight: 600;  
+  font-size: 18px;
   line-height: 30px;
 }
 
@@ -430,6 +438,8 @@ header{
 .card-body h5{
   text-align: center;
 }
+
+
 
 /* ABOUT PAGE */
 
@@ -605,6 +615,12 @@ header{
   padding: 15px;
   text-align: center;
   font-weight: 200;
+
+  & h5{
+    font-family: ;
+    text-transform: capitalize;
+    
+  }
 }
 
 .backgroud{
