--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -51,17 +51,17 @@ header{
 
   @keyframes ride {
     0%{
-      transform: translateX(10px);
-      transition: 8s ease-in;
+      transform: translatex(-10px);
+      transition: 3s ease-out;
     }
     50%{
-      transform: translateX(-10px);
-      transition: all 4s ease-in;
+      transform: translatex(20px);
+      transition: all 4s ease-out;
     }
 
     100%{
-      transform: translateX(45px);
-      transition: all ease-in-out;
+      transform: rotate(-50deg);
+      transition: all ease-out;
       transition-delay: 6s;
     }
 
