--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -675,6 +675,7 @@ header{
   align-items: center;
   background-color: rgba(134, 165, 177, 0.719);
   height: 40vh;
+  padding: 20px 15px;
  }
 
  .contact-content{
@@ -682,7 +683,7 @@ header{
   justify-content: center;
   flex-direction: column;
   align-items: center;
- 
+  width: 60%;
  
  }
 
@@ -694,10 +695,8 @@ header{
 
 
  hr{
-    background-color: rgb(75, 0, 0);
-    height:12px;
-    border: none;
-   
+    background-color: rgb(255, 253, 253);
+    height:6px;
   }
 
   .contact-btn{
@@ -706,12 +705,31 @@ header{
     align-items: center;
     text-align: center;
     gap: 10px;
+    background-color: #f7b80a;
+    padding: 10px;
   }
 
   .contact-btn1, .contact-btn2{
     border: none;
     padding: 5px;
     border-radius: 4px;
+    background-color: #f7b80a;
+  }
+
+  .contact-btn1{
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+  }
+
+  .contact-btn2{
+    border-left: 2px solid white;
+    border-bottom: 2px solid white;
+  }
+
+  .contact-form{
+ padding: 10px;
+ font-size: 18px;
+ line-height: 20px;
   }
 
 
@@ -721,11 +739,10 @@ header{
   .contact-us{
    display: flex;
    flex-wrap: wrap;
-   gap: 35px;
-   padding: 10px;
+   gap: 25px;
    height: 50vh;
    background-color: rgba(119, 18, 0, 0.829);
-   border-bottom-left-radius: 150%;
+   border-bottom-left-radius: 100%;
   }
 
   
@@ -742,6 +759,11 @@ header{
     align-items: center;
     text-align: center;
     gap: 10px;
+    background-color: transparent;
     
+  }
+
+  .contact-content{
+    width: 100%;
   }
 }  
