--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -47,7 +47,7 @@ header{
     mix-blend-mode: multiply;
    animation-name: move;
    position: relative;
-   animation-duration: 2s;
+   animation-duration: 8s;
    animation-iteration-count: infinite;
    animation-fill-mode: forwards;
     border-bottom: 2px solid var(--secondary-color);
@@ -56,15 +56,17 @@ header{
   @keyframes move {
     0%{
       left: 0%;
+      opacity: 1;
     }
     50%{
-     left: 70%;
-     transform: rotateY(45deg);
-     border: 2px solid white;
+     left: 80%;
+     /* opacity: 0; */
+     transform: rotate(-10deg);
     }
 
     100%{
-     left: 0%;
+     left: -20%;
+     /* opacity: 0; */
     }
 
   }
