--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -728,13 +728,12 @@ header{
  
 input[type="text"], input[type="email"],
 input[type="tel"]{
-  all: initial;
-  border: 2px solid orange;
+  border: 2px solid rgba(255, 166, 0, 0.562);
   border-radius: 4px;
-  padding: 5px;
   width: 100%;
-  gap: 30px;
-  height: 50px;
+  height: 40px;
+  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 20px;
   font-size: 20px;
 }
@@ -766,7 +765,7 @@ select, textarea{
 }
 
 textarea{
-padding: 5px;
+padding: 15px;
 height: 150px;
 width: 100%;
 }
@@ -778,11 +777,13 @@ width: 100%;
 input{
   all: initial;
   border-bottom: 2px solid orange;
+  border-right: 2px solid;
   border-radius: 4px;
-  padding: 5px;
+  padding: 10px;
   margin-top: 20px;
   width: 80%;
   font-size: 20px;
+  
 }
 input[type="submit"] {
    background-color: #4e0404;
