--- a/Shipping Agency Company/M2 CargoLt.CSS
+++ b/Shipping Agency Company/M2 CargoLt.CSS
@@ -15,6 +15,10 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  html{
+    scroll-behavior: smooth;
+  }
   
   body {
     font-family: Arial, sans-serif;
@@ -48,18 +52,18 @@ header{
    animation-name: move;
    position: relative;
    animation-duration: 8s;
-   animation-iteration-count: infinite;
+   animation-iteration-count: 2;
    animation-fill-mode: forwards;
-    border-bottom: 2px solid var(--secondary-color);
+    /* border-bottom: 2px solid var(--secondary-color); */
   }
 
   @keyframes move {
     0%{
-      left: 0%;
+      left: -20%;
       opacity: 1;
     }
     50%{
-     left: 80%;
+     left: 40%;
      /* opacity: 0; */
      transform: rotate(-10deg);
     }
@@ -281,36 +285,103 @@ header{
 
   
 .container-head{
-  background-image: url(CompanyImage/backg1.webp);
-  padding: 10% 50px;
+  background: linear-gradient( to bottom, rgba(82, 37, 37, 0.699)  10%, rgba(223, 106, 106, 0.479) 80% ), url('CompanyImage/warehouse-and-storage img.jpg');
+  padding: 10% 70px;
   background-position: top;
   background-size: cover;
+
   /* display: inline-block; */
 }
 
 .head-content{
-  width: 100%;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 10% 10px;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 45px;
+  padding: 10% 0px;
   height: fit-content;
- 
+  backdrop-filter: blur(3px);
+  background-color: #faf3e500;
+ border-radius: 4px;
 }
+
+.head-content .head-img{
+width: 100%;
+padding: 10px;
+border-radius: 45px;
+
+}
+
+.head-img img{
+  width: 100%;
+  filter: drop-shadow( 5px 5px 5px white);
+}
+
+.head-imglogo{
+  filter: drop-shadow( 15px 5px 5px white);
+  width: 130px;
+  position: relative;
+  animation-name: dance;
+  animation-duration: 8s;
+   animation-iteration-count: infinite;
+   animation-fill-mode: forwards;
+}
+
+
+
+@keyframes dance {
+  0%{
+    left: -10%;
+    opacity: 1;
+  }
+  50%{
+   left: 50%;
+   /* opacity: 0; */
+   transform: rotate(-10deg);
+  }
+
+  100%{
+   left: -10%;
+   /* opacity: 0; */
+  }
+
+}
+
 
 .head-text{
   display: inline-block;
-  padding: 10px;
+  padding: 13px;
   width: 100%;
+  border-bottom: 150%;
   height: fit-content;
-  backdrop-filter: blur(3px);
-  background-color: #fcfbf913;
+  backdrop-filter: blur(2px);
+  background-color: #fcfbf900;
+  
+ 
 }
 
+.zoomInBottom1 { 
+  animation-name: zoomInBottom;
+  animation-duration: 2s;
+
+}
+@keyframes zoomInBottom{
+    from {
+        transform: scale(4) translateY(50%);
+        opacity: 0;
+    }
+}
 .head-text h1{
   text-transform: uppercase;
   font-family: "Rubik Wet Paint", system-ui;
   font-weight: 100;
   font-style: normal;
- font-size: 2.5rem;
+  text-align: left;
+ font-size: 4.5rem;
+ color: var(--primary-color);
+ text-shadow: 0 2px 8px white;
+ -webkit-text-stroke: 2px #490303;
+ 
 }
 
 
@@ -319,7 +390,8 @@ header{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;  
   font-size: 18px;
-  line-height: 30px;
+  line-height: 15px;
+  color: white;
 }
 
 .head-btn{
@@ -328,29 +400,45 @@ header{
 
 }
 
-.booked{
-  background-color: #4e0404;
-  border: none;
-  padding: 10px 20px;
-  color: white;
-  transition: 0.5s ease-in;
-}
-
-.booked:hover{
-  text-decoration: underline;
-  opacity: 0.8;
-  border-radius: 4px;
-  background-color: #f7b80a;
-  color: #4e0404;
+.head-btn>.booked a{
+  position: absolute;
+  border-left: 14px solid var(--primary-color);
+  /* left: 50px; */
+  text-align: center;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 768px) {
 .container-head{
-  background-image: url(CompanyImage/backg1.webp);
+  background: linear-gradient( to bottom, rgba(82, 37, 37, 0.699)  10%, rgba(223, 106, 106, 0.479) 80% ), url('CompanyImage/warehouse-and-storage img.jpg');
   padding: 30% 10px;
   background-position: calc(50% - 50px);
   background-size: cover;
   /* display: inline-block; */
+}
+
+.head-content{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.head-text h1{
+  font-size: 2.1rem;
+}
+
+
+.head-text p{
+  font-style: oblique;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;  
+  font-size: 15px;
+  line-height: 15px;
+  color: white;
+}
+.head-img img{
+  width: 100%;
 }
 
 .card{
@@ -371,7 +459,7 @@ header{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 10%;
+  /* padding-top: 10%; */
   gap: 15px;
 }
 
@@ -404,7 +492,7 @@ header{
 .card:hover{
   cursor: pointer;
   transform: scale(1.08);
-
+  opacity: 0.6;
 }
 
 .card img{
@@ -443,7 +531,10 @@ header{
 /* ABOUT PAGE */
 
 .container-about{
-  background-image: url(CompanyImage/truck-ship.jpg);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgba(255, 251, 243, 0.726);
   padding: auto 50px;
   background-position: center;
   background-size: cover;
@@ -453,14 +544,17 @@ header{
 .about-content{
   width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 10% 20px;
+  padding: 10% 50px;
  
 }
 
 .about-content span{
-  color: #ffbd08;
-  font-size: 19px;
- margin-left: 15px;
+  color: #ffffff;
+  font-size: 15px;
+ border-radius: 4px;
+ letter-spacing: 2px;
+ text-transform: uppercase;
+ border-left: 12px solid var(--primary-color);
  background-color: #4e0404c9;
  padding: 5px 10px;
  
@@ -478,6 +572,7 @@ header{
 
 .about-text h1{
   text-transform: uppercase;
+  text-align: left;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -493,37 +588,117 @@ header{
   justify-content: last baseline;
 }
 
-.booked{
-  background-color: #4e0404;
+.booked a{
+  background-color: #490303;
   border: none;
+ display: flex;
+  border-right:14px solid rgb(255, 255, 255);
   padding: 10px 20px;
   color: white;
   transition: 0.5s ease-in;
   /* float: right; */
 }
 
-.booked:hover{
-  text-decoration: underline;
+.booked a:hover{
+  text-decoration: none;
   opacity: 0.8;
-  border-radius: 4px;
+  border-top-right-radius: 55%;
+  border-bottom-right-radius: 55%;
+  border-left:50px solid rgb(49, 3, 3);
+  /* border-radius: 4px; */
   background-color: #f7b80a;
   color: #4e0404;
 }
 
+
+/* About Page RIght Side */
+
+.about-right-container{
+  width: 100%;
+  max-width: 100%;
+}
+
+.about-right-img img{
+  width: 100%;
+  padding: 12px;
+  mix-blend-mode: multiply;
+}
+
+.about-right-content{
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  margin: 14px;
+  text-align: center;
+  backdrop-filter: blur(2px);
+  background-color: #fcfbf925;
+  padding: 10px;
+  
+}
+
+.about-info-content{
+  font-size: 1rem;
+  font-weight: 900;
+  /* overflow: hidden; */
+}
+
+.about-info-content h3{
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+  word-wrap: none;
+  font-weight: bold;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.about-info-content p{
+  font-weight: 500;
+  font-family: sans-serif;
+ -webkit-text-stroke: 2px rgba(224, 153, 153, 0.363);
+ text-align: center;
+ /* writing-mode: vertical-rl;
+ text-orientation: downright; */
+}
+
+
+
 /* About Query */
 
 @media  screen and (max-width: 768px) { 
-.container-about{
-  background-image: url(CompanyImage/truck-ship.jpg);
-  padding: auto;
-  background-position: center;
-  background-size: cover;
+
+  .container-about{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background: wheat;
+    padding: auto 50px;
+    background-position: center;
+    background-size: cover;
+  
+  }
+  
+
+  
+.about-content{
+  width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 5% 10px;
+ 
+}
+
+
+.about-info-content h3{
+  font-size: 1.5rem;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
 
 }
 
 /* CAROUSEL GALLERY */
 
-}
+
  .carousel-item img {
   height: 400px;
   width: 100%;
@@ -564,21 +739,42 @@ header{
   text-align: center;
  }
 
-.service-content{
+.service-content {
   display: inline-flex;
   flex-direction: column;
   max-width: 100%;
   padding: 20px;
   width: 500px;
 }
-.service-content h2 {
+
+
+.service-content .typing, h1 {
   font-family: "Unica One", sans-serif;
   font-weight: 600;
   font-style: normal;
   font-size: 3rem;
+  text-align: center;
   letter-spacing: 2px;
 }
 
+
+.typing {
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    text-align: center;
+    /* white-space: wrap; */
+    /* border-right: 2px solid #a0322e; */
+    animation: typing 4s steps(12, end), cursor .2s steps(12, end) infinite;
+    animation-iteration-count: infinite;
+
+}
+@keyframes typing {
+    from { width: 0 }
+}
+@keyframes cursor {
+    50% { border-color: transparent }
+}
 
 .service-content p{
   font-family: "Schibsted Grotesk", sans-serif;
@@ -697,18 +893,24 @@ header{
     background-color: rgb(255, 253, 253);
     height:6px;
   }
+  .contact-form { 
+    background: linear-gradient( to bottom, rgba(146, 135, 110, 0.616)  10%, rgba(223, 106, 106, 0.479) 80% ), url('CompanyImage/warehouse-and-storage img.jpg');
+    background-position: center; 
+    background-size: cover;
+     /* backdrop-filter: blur(4px);  */
+     padding: 10px; 
+     font-size: 18px; 
+     line-height: 15px; 
+     max-width: 100%; 
+     border-radius: 10px;  
+    }
 
-  .contact-form{
- padding: 10px;
- font-size: 18px;
- line-height: 15px;
- max-width: 100%;
-  }
-
-  .contact-form-text p{
-    width: 80%;
-    max-width: 100%;
+  .contact-form-text  {
+    width: 100%;
+    text-transform: uppercase;
     text-align: center;
+    /* text-decoration: overline; */
+    text-shadow: 3px 0px 2px  white;
     margin-top: 30px;
   }
 
@@ -726,8 +928,7 @@ header{
   }
 
  
-input[type="text"], input[type="email"],
-input[type="tel"]{
+input[type="text"], input[type="email"]{
   border: 2px solid rgba(255, 166, 0, 0.562);
   border-radius: 4px;
   width: 100%;
@@ -756,7 +957,11 @@ input[type="tel"]{
   display: flex; 
   flex-direction: column; 
   align-items: center; 
-  width: 100%;
+  margin-right: auto;
+  padding: 10px;
+  background-color: #33333348;
+  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.397));
+
 
 }
 
@@ -768,23 +973,32 @@ textarea{
 padding: 15px;
 height: 150px;
 width: 100%;
+background-color: white;
 }
 
 #result{
   padding-top: 25px;
+  text-align: center;
 }
 
-input{
-  all: initial;
-  border-bottom: 2px solid orange;
-  border-right: 2px solid;
+
+
+ 
+input[type="text"], input[type="email"]{
+  border: 2px solid rgba(255, 166, 0, 0.562);
   border-radius: 4px;
-  padding: 10px;
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 20px;
-  width: 80%;
   font-size: 20px;
-  
 }
+
+input[type="tel"]{
+  display: none;
+}
+
 input[type="submit"] {
    background-color: #4e0404;
   color: white; 
@@ -793,11 +1007,19 @@ input[type="submit"] {
   width: 200px;
   display: flex;
   padding-bottom: 45px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 20px; 
+  transition: 0.4s ease-out;
   cursor: pointer; 
   /* margin-top: 20px;  */
+}
+
+input[type="submit"]:hover{
+  background-color: #ffbd08;
+  transform: scale(1.04);
+  border: 3px solid white;
 }
 
 input:focus {
@@ -844,6 +1066,27 @@ select{
   width: 100px;
   margin: 10px;
   cursor: pointer;
+  animation-name: scale;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes scale {
+  0%{
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  50%{
+    transform: scale(1.5);
+    filter: drop-shadow(0px 0px 10px rgba(158, 24, 24, 0.801));
+  }
+
+  100%{
+    transform: scale(1);
+    
+  }
+  
 }
 
 .thumbnails img:last-child{
